--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Student</title>
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" type="image/x-icon">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <script src="{% static 'script.js' %}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -23,10 +24,19 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 
+    <style>
+        .carousel-item>img {
+            width: 100%;
+            height: 400px;
+        }
+        
+    </style>
+
+
 </head>
 
 <body class="md-4">
-    <div class="header">
+    <div class="header" style="z-index: -5;">
         <nav class="navbar navbar-expand-sm">
             <div class="container">
                 <div class="frame-radius">
@@ -77,10 +87,43 @@
             </div>
         </nav>
     </div>
-    
-    
 
-
+    <section id="slider">
+        <div class="carousel slide" data-bs-ride="carousel" id="Myslider">
+            <ol class="carousel-indicators">
+                <button data-bs-target="#Myslider" data-bs-slide-to="0" class="active"></button>
+                <button data-bs-target="#Myslider" data-bs-slide-to="1"></button>
+                <button data-bs-target="#Myslider" data-bs-slide-to="2"></button>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item img-fluid active">
+                    <img src={% static 'pictures/Untitled-1.png' %}>
+                </div>
+                <div class="carousel-item img-fluid">
+                    <img src={% static 'pictures/Untitled-2.png' %}>
+                </div>
+                <div class="carousel-item img-fluid">
+                    <img src={% static 'pictures/Untitled-3.png' %}>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- <table align="center" style="margin-top: 10px;" width="100%">
+        <tr>
+            <py>
+                for i in range(10):
+                    print(i)
+            </py>
+        </tr>
+       
+        
+    </table> -->
+    <h1 align="center" class="pixel-16 scpt" style="margin-top: 10px;"> 
+        <script>
+            print("Apisit Saithong");
+        </script>
+    </h1>
+   
 </body>
 
 </html>
