--- a/templates/home.html
+++ b/templates/home.html
@@ -1,93 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'main.html' %}
 {% load static %}
+{% block title %}Home{% endblock title %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student</title>
-    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" type="image/x-icon">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <script src="{% static 'script.js' %}"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+{% block contents %}
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
-
-    <style>
-        .carousel-item>img {
-            width: 100%;
-            height: 400px;
-        }
-        
-    </style>
-
-
-</head>
-
-<body class="md-4">
-    <div class="header" style="z-index: -5;">
-        <nav class="navbar navbar-expand-sm">
-            <div class="container">
-                <div class="frame-radius">
-                    <a href="" class="nav-link">
-                        <p class="pixel-16 logo" alt="SSKRU">Computer Science</p>
-                    </a>
-                </div>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar1">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="navbar1" class="collapse navbar-collapse">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a href="" class="nav-link">
-                                <div class="pxitm">
-                                    <p class="pixel-8 act-item">Home</p>
-                                </div>
-                            </a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a href="students" class="nav-link">
-                                <div class="pxitm">
-                                    <p class="pixel-8">Student</p>
-                                </div>
-                            </a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a href="home.html" class="nav-link">
-                                <div class="pxitm">
-                                    <p class="pixel-8">Activity</p>
-                                </div>
-                            </a>
-                        </li>
-                        <hr>
-                        <li class="nav-item">
-                            <a href="home.html" class="nav-link">
-                                <div class="pxitm">
-                                    <p class="pixel-8">Contact</p>
-                                </div>
-                            </a>
-                        </li>
-                        <hr>
-
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-
+<div class="contents">
     <section id="slider">
         <div class="carousel slide" data-bs-ride="carousel" id="Myslider">
             <ol class="carousel-indicators">
@@ -108,22 +25,20 @@
             </div>
         </div>
     </section>
-    <!-- <table align="center" style="margin-top: 10px;" width="100%">
-        <tr>
-            <py>
-                for i in range(10):
-                    print(i)
-            </py>
-        </tr>
-       
-        
-    </table> -->
-    <h1 align="center" class="pixel-16 scpt" style="margin-top: 10px;"> 
-        <script>
-            print("Apisit Saithong");
-        </script>
-    </h1>
-   
-</body>
+    <hr>
+    <div class="worklist">
+        <div class="d-flex flex-row align-content-stretch flex-wrap content-blocks" style="height: 200px;">
+            <div class="p-2 m-2 bg-light border text-center">WORK-1</div>
+            <div class="p-2 m-2 bg-light border text-center">WORK-1</div>
+            <div class="p-2 m-2 bg-light border text-center">WORK-1</div>
+        </div>
+    </div>
 
-</html>
+
+    
+   
+
+
+{% endblock contents %}
+
+
