--- a/static/style/fonts.css
+++ b/static/style/fonts.css
@@ -18,6 +18,16 @@
     src: url(/static/font/KarmaticArcade.ttf);
 }
 
+@font-face {
+    font-family: eng-1;
+    src: url(/static/font/Dsu_adi.ttf);
+}
+
+@font-face {
+    font-family: digital;
+    src: url(/static/font/Digital.ttf);
+}
+
 
 .pixel-16 {
     font-family: pixels-16;
@@ -33,4 +43,12 @@
 
 .hand-eng {
     font-family: hand-eng;
+}
+
+.eng-1 {
+    font-family: eng-1;
+}
+
+.digital {
+    font-family: digital;
 }
