--- a/templates/main.html
+++ b/templates/main.html
@@ -23,10 +23,10 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="{% static 'style/style.css' %}">
-    <link rel="stylesheet" href="{% static 'style/fonts.css' %}">
-    <link rel="stylesheet" href="{% static 'style/animation.css' %}">
-    <script src="{% static 'script/script.js' %}"></script>
+    <link rel="stylesheet" href={% static 'style/style.css' %}>
+    <link rel="stylesheet" href={% static 'style/fonts.css' %}>
+    <link rel="stylesheet" href={% static 'style/animation.css' %}>
+    <script src={% static 'script/script.js' %}></script>
     <script>
         $(function() {
             $('#menu-title a').click(function(){
@@ -34,15 +34,28 @@
             });
         });
     </script>
-
-
-
-
     <style>
         .carousel-item>img {
             width: 100%;
             height: 400px;
         }
+        .frame-items {
+            border-radius: 20px;
+            height: fit-content;
+            background-color:#ccc5b9;
+            margin: 10px;
+            padding: 10px;
+        }
+        .my-works {
+            border-radius: 20px;
+        }
+
+        .img-items {
+            margin: 10px;
+        }
+        
+
+       
         
     </style>
 
