--- a/templates/work_pages/style.html
+++ b/templates/work_pages/style.html
@@ -44,10 +44,13 @@
             background-color: #ccc5b9;
             margin: 10px;
             padding: 10px;
+            height: 450px;
         }
 
         .my-works {
             border-radius: 20px;
+            height: 400px;
+            width: 500px;
         }
 
         .img-items {
