--- a/templates/work_pages/form.html
+++ b/templates/work_pages/form.html
@@ -10,53 +10,59 @@
 </div>
 
 <div align="center" class="mt-5">
-    <form action="" align="center" class="d-flex flex-column align-items-center">
+    <form action="" align="center" class="d-flex flex-column align-items-center form-control-sm">
         <div class="regis w-50 my-form m-4 p-4" align="center">
             <div class="form-group">
                 <label for="name" class="text-light mb-2">Name-Surname</label>
-                <div class="input-group">
-                    
-                    <button id="btn-title" class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Prefix</button>
-                    <div id="menu-title" class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Mr.</a>
-                        <a class="dropdown-item" href="#">Mrs.</a>
-                        <a class="dropdown-item" href="#">M.</a>
-                    </div>
-                    
+                <div class="input-group w-75">
                     <input type="text" class="form-control" id="name">
                 </div>
-
             </div>
             <hr class="text-light">
-            <div class="form-group ">
+            <div class="form-group align-items-center">
                 <label for="name" class="text-light mb-2">Gender</label>
-                <div class="d-flex flex-md-row justify-content-center">
+                <div class="d-flex flex-md-row  justify-content-around align-items-center flex-sm-column ">
                     <div class="form-check form-check-inline d-flex">
                         <input type="checkbox" class="form-check" id="radio1" value="option1">
-                        <label for="radio1" class="form-check-label text-light m-2">Female</label>
+                        <label for="radio1" class="form-check-label text-light">Female</label>
                     </div>
                     <div class="form-check form-check-inline d-flex">
                         <input type="checkbox" class="form-check" id="radio2" value="option2">
-                        <label for="radio2" class="form-check-label text-light m-2">Male</label>
+                        <label for="radio2" class="form-check-label text-light">Male</label>
                     </div>
                     <div class="form-check form-check-inline d-flex">
                         <input type="checkbox" class="form-check" id="radio3" value="option3">
-                        <label for="radio3" class="form-check-label text-light m-2">LGBTQIA+</label>
+                        <label for="radio3" class="form-check-label text-light">LGBTQIA+</label>
                     </div>
                 </div>
-                <hr class="text-light">
-                <div class="form-group">
-                    <label for="email" class="text-light mb-2">E-mail</label>
-                    <input type="email" class="form-control" id="email">
-                    <hr class="text-light">
-                </div>
-                <div class="form-group">
-                    <button type="reset" class="btn btn-danger">Reset</button>
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </div>
-
             </div>
+            <hr class="text-light">
+            <div class="form-group w-75">
+                <label for="birthday" class="text-light mb-2">Birth of Date</label>
+                <input type="date" name="birthday" id="birthday" class="form-control">
+            </div>
+            <hr class="text-light">
+            <div class="form-group w-75">
+                <label for="address" class="text-light mb-2">Address</label>
+                <textarea name="address" id="adress" class="form-control"></textarea>
+            </div>
+            <hr class="text-light">
+            <div class="form-group w-75">
+                <label for="bio" class="text-light mb-2">Bio</label>
+                <textarea name="bio" id="bio" class="form-control"></textarea>
+            </div>
+            <hr class="text-light">
+            <div class="form-group w-75">
+                <label for="email" class="text-light mb-2">E-mail</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+            <hr class="text-light">
+            <div class="form-group">
+                <button type="reset" class="btn btn-danger">Reset</button>
+                <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+
+
         </div>
 
     </form>
