--- a/templates/main.html
+++ b/templates/main.html
@@ -49,6 +49,9 @@
         .img-items {
             margin: 10px;
         }
+        nav {
+            background-color: #403d39;
+        }
         
 
        
