--- a/templates/work_pages/form.html
+++ b/templates/work_pages/form.html
@@ -3,9 +3,9 @@
 
 {% block body %}
 
-<div class="bubble-head rounded-circle">
+<div class="bubble-head">
     <a href="/">
-        <img class="bubble-img" src="{% static 'pictures/home.png' %}" alt="" width="45px">
+       <h1 class="keycaps bubble-btn" >W</h1>
     </a>
 </div>
 
