--- a/templates/home.html
+++ b/templates/home.html
@@ -46,13 +46,13 @@
                 <div class="frame-items">
                     <div class="my-works">
                         <div class="card mb-3 align-items-center" style="width: 15rem;">
-                            <img class="card-img-top img-items" src="{% static 'pictures/blank.png'%}" alt="">
+                            <img class="card-img-top img-items" src="{% static 'pictures/lib-logo.png'%}" alt="">
                             <div class="card-body align-items-center">
-                                <a class="card-title nav-link" href="#">
-                                    <h4>Blank</h4>
+                                <a class="card-title nav-link" href="lib">
+                                    <h4>Library</h4>
                                 </a>
                                 <p class="card-text">
-                                    - text -
+                                    SSKRU
                                 </p>
                             </div>
                         </div>
