--- a/templates/home.html
+++ b/templates/home.html
@@ -90,5 +90,8 @@
                 </div>
             </div>
         </div>
+        <script>
+            print('Apisit')
+        </script>
         {% endblock contents %}
 </body>
